# pmsm-femm-to-tinyml

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-windows-femm.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: one_eighth_100C.toml  one_eighth_20C.toml  one_eighth_60C.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATA_MANAGEMENT.md  QUICKSTART_WINDOWS.md  REPRODUCIBILITY.md  SOURCE_AUDIT.md  TEAM_HANDOVER_CHECKLIST.md  TOOLKIT_HANDOFF.md  UPGRADE_ROADMAP.md
examples/: dense_grid_template.csv  smoke_points.csv
legacy/femm_skew/: ClarkPark.py  Cogging_withSkew.py  DemagFns.py  DemagFnsN30SH.py  ManyOP_parallelProcessing_wOSkew_Grid.py  ManyOP_parallelProcessing_withSkew.py  ManyOP_parallelProcessing_withSkew_LttsGrid.py  NoLoad_parallelProcessing_withOutSkew.py  NoLoad_parallelProcessing_withSkew.py  NoLoad_parallelProcessing_withSkewAndParallelWinding.py  ProcessMesh.py  Simulate.py  SingleOP_parallelProcessing_withSkew.py  SkewSetup.py  groupLabellingScheme.txt  meshProcessing.py  (+9 more)
operating_points/: coarse_20point_map.csv
reference/: input_manifest.json
scripts/: bootstrap_windows.ps1  capture_environment.py  check_environment.py  create_manifest.py  export_canonical_truth_map.py  generate_grid.py  package_reference_results.py  run_coarse_100C.cmd  run_femm_map.py  run_smoke_100C.cmd  summarize_results.py  verify_manifest.py
tests/: test_config.py  test_export_canonical_truth_map.py  test_postprocess.py  test_provenance.py  test_transforms.py
(+19 files in other folders)
